<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCDD2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_number_text_view"
            style="@style/BasicStyle"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/question_text_view"
            style="@style/BasicStyle"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/name_textfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:hint="Name"
            android:inputType="textCapWords"
            android:textSize="36sp"
            android:textColor="#D50000"
            android:textStyle="bold|italic"
            android:cursorVisible="false"/>

        <LinearLayout
            android:id="@+id/checkbox_layout"
            style="@style/BasicStyle"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <CheckBox
                android:id="@+id/checkbox_one"
                style="@style/BasicStyle"
                android:text="@string/america"
                android:textSize="16sp"
                android:textStyle="italic|bold"/>

            <CheckBox
                android:id="@+id/checkbox_two"
                style="@style/BasicStyle"
                android:text="@string/australia"
                android:textSize="16sp"
                android:textStyle="italic|bold"/>

            <CheckBox
                android:id="@+id/checkbox_three"
                style="@style/BasicStyle"
                android:text="@string/south_australia"
                android:textSize="16sp"
                android:textStyle="italic|bold"/>
        </LinearLayout>

        <RadioGroup
            style="@style/BasicStyle"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_1"
                style="@style/BasicStyle"/>

            <RadioButton
                android:id="@+id/radio_2"
                style="@style/BasicStyle" />

            <RadioButton
                android:id="@+id/radio_3"
                style="@style/BasicStyle" />

            <RadioButton
                android:id="@+id/radio_4"
                style="@style/BasicStyle" />

        </RadioGroup>

        <RelativeLayout
            style="@style/BasicStyle">

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/reset_button"
                android:layout_alignParentLeft="true"
                android:onClick="reset"
                android:text="@string/reset_button"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/next_button"
                android:layout_alignParentRight="true"
                android:onClick="nextQuestion"
                android:text="@string/next_button"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
